appId: cl.tcgplatform.app
---
- launchApp
- tapOn: "Perfil"
- tapOn: "Ingresar"
- tapOn:
    text: "Email"
- inputText: "buyer.beta@example.test"
- tapOn:
    text: "Contraseña"
- inputText: "BetaPassw0rd!"
- tapOn: "Ingresar"
- tapOn: "Buscar"
- tapOn:
    text: "Nombre o número"
- inputText: "Test Mon"
- tapOn: "Test Mon #1"
- tapOn: "Agregar a colección"
- tapOn: "Guardar en colección"
- assertVisible: "Agregada a tu colección."
- tapOn: "Colección"
- assertVisible: "Test Mon"
- tapOn: "Test Mon #1"
- assertVisible: "Guardar cambios"
- tapOn: "Colección"
- assertVisible: "Progreso por set"
